<resources>
    <string name="app_name">Pratik Trading App</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_out">Signed Out</string>
    <string name="signed_in">You Signed In!</string>
    <string name="error_signing_in">Error Signing in!</string>
    <string name="errorMessage">Unable to load Alerts. Please verify Internet connection and try again.</string>
    <string name="widgetDescription">Here you can create a home sreen widget which will display price of the stock you select. The price will be updated every 15 minutes. </string>
    <string name="symbol">Enter SYMBOL</string>
    <string name="addWidget">Add Widget</string>
    <string name="invalidSymbol">Invalid Symbol</string>
    <string name="isOffline">Your device is offline. Please try again later. </string>
    <string name="select_symbol">Select a stock to track</string>
    <string name="widget_symbol_key">widget_symbol_key</string>
    <string name="sba_invite">For more charts visit stocksbuyalerts.com</string>
    <string name="privacy_policy_url">http://www.stocksbuyalerts.com/disclaimer/</string>
    <string name="news_feed_url">https://feeds.finance.yahoo.com/rss/2.0/headline?s=SPY,DJI,IXI,QQQ,DIA</string>
    <string name="symbol_added_to_widget">Symbol %1$s added to home screen widget!</string>
    <string name="headlines">Market Headlines</string>
    <string name="mini_chart">Mini Chart</string>
    <string name="menu_add_widget">Add Price Tracking Widget</string>
    <string name="share">Share</string>
    <string name="symbol_hint">GOOG MSFT TSLA AAPL</string>



</resources>
