<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddWidgetActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/widgetDescription"
        android:textSize="16sp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/symbol"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:hint="@string/symbol_hint"
        android:imeOptions="actionGo"
        android:inputType="textCapCharacters"
        android:maxLines="1"
        android:textAllCaps="true"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_wrong_symbol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/invalidSymbol"
        android:textColor="@color/colorError"
        android:textSize="16sp"
        android:textStyle="italic|bold"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btn_addWidget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:text="@string/addWidget"
        android:textSize="24sp" />

</LinearLayout>